objects/Grade__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Weighting__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Assignment Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>This field captures any comments on the grade that was given.</description>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <formula>CASESAFEID(Course__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>We store course here as well so we can calculate final grade using aggregate queries</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <formula>Course__r.Credit_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The date the assignment was due for the grade given</description>
        <formula>Assignment__r.Due_Date__c</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entered_Grade__c</fullName>
        <label>Entered Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faux_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faux Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPA_Added_Value_Points__c</fullName>
        <formula>Course__r.GPA_Added_Value_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPA Added Value Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Grade Number</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Category__c</fullName>
        <formula>TEXT(Course__r.Grade_Scale_Lookup__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Id__c</fullName>
        <formula>CASESAFEID(Course__r.Grade_Scale_Lookup__c)</formula>
        <label>Grade Scale Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Name__c</fullName>
        <formula>Course__r.Grade_Scale_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_RT__c</fullName>
        <formula>Course__r.Grade_Scale_Lookup__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grade Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_With_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grade With Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grading_Type_Category__c</fullName>
        <formula>IF (
  ISBLANK( Standard__c ),
    TEXT(Assignment__r.Picklist_Value__r.Category__c),
    TEXT(Assignment__r.Standard_Scale__r.Category__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grading Type Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grading_Type_Name__c</fullName>
        <formula>IF ( 
ISBLANK( Standard__c ), 
Assignment__r.Picklist_Value__r.Name, 
Assignment__r.Standard_Scale__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grading Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grading_Type_RT__c</fullName>
        <formula>IF ( 
ISBLANK( Standard__c ), 
Assignment__r.Picklist_Value__r.RecordType.DeveloperName, 
Assignment__r.Standard_Scale__r.RecordType.DeveloperName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grading Type RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grading_Type__c</fullName>
        <description>Store Grading Scale Id so we can lookup Normalization Map</description>
        <formula>IF (
ISBLANK( Standard__c ),
 CASESAFEID(Assignment__r.Picklist_Value__c),
 CASESAFEID(Assignment__r.Standard_Scale__c)  
)</formula>
        <label>Grading Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_In_Standard_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Standard Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked_for_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box has been checked then this grade is not able to be edited without admin approval.</description>
        <label>Locked for Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiply_GPA_Added_Value_Points__c</fullName>
        <formula>Course__r.Multiply_GPA_Added_Value_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiply GPA Added Value Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numeric_Course_Grade__c</fullName>
        <label>Numeric Course Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Points Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possible_Points__c</fullName>
        <label>Possible Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publish_Comment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This box denotes whether the comment should be published to the portal.</description>
        <inlineHelpText>This box denotes whether the comment should be published to the portal.</inlineHelpText>
        <label>Publish Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Raw_Grade__c</fullName>
        <label>Raw Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Is__c</fullName>
        <formula>Time__r.Reporting_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Is</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <formula>Time__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Parent_Parent__c</fullName>
        <formula>CASESAFEID(Time__r.Parent_Time_Element__r.Parent_Time_Element__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Parent Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Parent__c</fullName>
        <formula>CASESAFEID(Time__r.Parent_Time_Element__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_RT__c</fullName>
        <formula>Student_Section__r.Section__r.RecordType.DeveloperName</formula>
        <label>Section RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <formula>CASESAFEID(Student_Section__r.Section__c)</formula>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Gradebook_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Gradebook Grade</label>
        <referenceTo>Grade__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Strand__c</fullName>
        <formula>CASESAFEID(Standard__r.Strand__c)</formula>
        <label>Standard Strand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Times_Assignment__c</fullName>
        <label>Standard Times Assignment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Weighting__c</fullName>
        <label>Standard Weighting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standards_Only_Grading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standards Only Grading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strand_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strand Grade</label>
        <referenceTo>Strand_Grade__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Reference_ID__c</fullName>
        <description>Displays the student reference ID of the student with the associated grade.</description>
        <formula>Student_Section__r.Student__r.Reference_Id__c</formula>
        <label>Student Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Time Object</description>
        <inlineHelpText>What Grade Reporting Period is this grade entry reported in?</inlineHelpText>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Grades</relationshipLabel>
        <relationshipName>Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Grade__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Assignment_Type_Percentages__c</fullName>
        <formula>Course__r.Use_Assignment_Type_Percentages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Assignment Type Percentages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_Grade_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weighted Grade Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_digit_Grade_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit Grade ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exclude_From_Section_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Simple flag that keeps the assignment from being used in the calculation of the section grade</description>
        <label>Exclude From Section Grade</label>
        <type>Checkbox</type>
    </fields>
    <label>Grade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment__c</columns>
        <columns>Assignment_Weighting__c</columns>
        <columns>Entered_Grade__c</columns>
        <columns>Weighted_Grade_Value__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0}</displayFormat>
        <label>Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Preventing_values_greater_than_1</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(
Course__c = &quot;a0PE000000GmoFe&quot;,
Grading_Type__c = &quot;a0sc0000002kbBt&quot;), 
IF((VALUE(Entered_Grade__c ))&gt; 1,true,false), false)</errorConditionFormula>
        <errorMessage>Entered grade cannot be greater than 1.</errorMessage>
    </validationRules>
</CustomObject>