objects/Grade__c/fields/X18_digiit_Grade_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_digiit_Grade_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 digiit Grade Id</label>
    <type>Text</type>
</CustomField>