objects/Grade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>Assignment_Weighting__c</columns>
    <columns>Entered_Grade__c</columns>
    <columns>Weighted_Grade_Value__c</columns>
    <columns>Student__c</columns>
    <columns>Student_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>